fix(ui): fix machine name after removing all content (#3807)
* fix(ui): fix machine name after removing all content

Improve the display of the auto-sizing machine name field so that the content doesn't get cut off
after clearing the field.

Fixes: #3341.

--- a/ui/src/app/base/components/NodeName/_index.scss
+++ b/ui/src/app/base/components/NodeName/_index.scss
@@ -23,11 +23,32 @@
     margin-top: $spv--small;
   }
 
+  .node-name__hostname-wrapper {
+    // Make the wrapping element take the space of the spacer.
+    flex-basis: min-content;
+
+    .p-form__control {
+      // Make the input's wrapper take up the space that's determined by the spacer.
+      width: 100%;
+    }
+  }
+
+  .node-name__hostname-spacer {
+    @extend %vf-heading-4;
+    // Collapse the spacer so it's taking up horizontal space but not vertical space.
+    height: 0;
+    margin: 0;
+    // Include space for the left and right borders on the input.
+    padding: 0 calc(#{$sph--large} + 1px);
+    visibility: hidden;
+    // Need to use pre so that the width includes any trailing whitespace.
+    white-space: pre;
+  }
+
   [type="text"].node-name__hostname {
     @extend %vf-heading-4;
 
     @media only screen and (min-width: $breakpoint-large) {
-      box-sizing: content-box;
       margin-bottom: -1px;
       min-width: 3rem;
       // Remove 2px to account for the top and bottom borders.
